--- a/WEB3_polygon-main/client/public/index.html
+++ b/WEB3_polygon-main/client/public/index.html
@@ -27,7 +27,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>DECENT MAIL(POLYGON-MUMBAI_TESTNET)</title>
   </head>
   <script
     src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
